--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node app.js"
+    "start": "node app.js"
   },
   "author": "Kenneth Hansen",
   "license": "ISC",
@@ -21,5 +21,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "save": "^2.4.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
